# Cloud_Networking_lab

./: .gitignore  Business_Problem_Approach.md  Integrated_Portfolio_Plan.md  PROJECT_COMPLETE.md  Pulumi_and_localstack.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  docker-compose.yml  generate_diagrams.py  pulumi_fesh_start  pyproject.toml  pytest.ini  requirements.txt
docs/: DEPLOY_WEB_SERVER.md  GETTING_STARTED.md  LOCALSTACK_QUICK_REFERENCE.md  LOCALSTACK_SETUP.md  NEXT_STEPS.md  PULUMI_QUICK_REFERENCE.md  architecture.md  networking_concepts.md  pulumi_guide.md  pulumi_state_guide.md  pulumi_syntax_guide.md  setup_guide.md  troubleshooting.md
examples/: basic_vpc.yaml  vpc_with_vpn.yaml
models/: aws_intent.py
pulumi/: Cost_Analysis.md  Pulumi.dev.yaml  Pulumi.local.yaml  Pulumi.yaml  Python_Pulumi_guide.md  Quick_Start.md  README.md  __main__.py  deploy.py  networking.py  vpc.py  vpn.py
scripts/: deploy_aws.sh  deploy_local.sh  destroy_aws.sh  destroy_local.sh  verify_connectivity.py
tests/: conftest.py
tests/unit/: test_aws_intent.py
