[project]
name = "cloud-networking-lab"
version = "0.1.0"
description = "AWS Cloud Networking Lab - Hybrid cloud connectivity with Pulumi"
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3.100.0",
    "pulumi-aws>=6.20.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "boto3>=1.34.0",
    "awscli>=1.42.62",
    "awscli-local>=0.22.2",
    "diagrams>=0.24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=models --cov=pulumi --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
